--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
                 <h2>Our Team</h2>
                 <ul>
                     <li>
-                        <img src="/images/mark_guerrero.jpg"  alt="Mark Guerrero" width="264">
+                        <img src="./images/mark_guerrero.jpg"  alt="Mark Guerrero" width="264">
                         <p>Mark Guerrero</p>
                         <p>Product Designer</p>
                     </li>
                     <li>
-                        <img src="/images/tom_ford.jpg" alt="Tom Ford" width="264">
+                        <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264">
                         <p>Tom Ford</p>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="/images/camila_garcia.jpg" alt="Camila Garcia" width="264">
+                        <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264">
                         <p>Camila Garcia</p>
                         <p>Marketing</p>
                     </li>
                     <li>
-                        <img src="/images/daniel_wilson.jpg" alt="Daniel Wilson" width="264">
+                        <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264">
                         <p>Daniel Wilson</p>
                         <p>UI Designer</p>
                     </li>
