Add fixes after review

--- a/index.html
+++ b/index.html
@@ -6,16 +6,28 @@
     </head>
     <body>
         <header>
-            <a href="/">WEBSTUDIO</a>
             <nav>
+                <a href="./index.html">WEBSTUDIO</a>
                 <ul>
-                    <li>Studio</li>
-                    <li>Portfolio</li>
-                    <li>Contacts</li>
+                    <li>
+                        <a href="">Studio</a>
+                    </li>
+                    <li>
+                        <a href="">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="">Contacts</a>
+                    </li>
                 </ul>
             </nav>
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <ul>
+                <li>
+                    <address href="tel:+110001111111">+11 (000) 111-11-11</address>
+                </li>
+                <li>
+                    <address href="mailto:info@devstudio.com">info@devstudio.com</address>
+                </li>
+            </ul>
         </header>
         <main>
             <section>
@@ -25,6 +37,7 @@
                 <button type="button">Order Service</button>
             </section>
             <section>
+                <h2>Features</h2>
                 <ul>
                     <li>
                         <h3>Strategy</h3>
@@ -45,33 +58,47 @@
                 </ul>
             </section>
             <section>
+                <h2>What are we doing</h2>
+                <ul>
+                    <li>
+                        <img src="./images/img_1.jpg" alt="Create desktop solutions." width="264">
+                    </li>
+                    <li>
+                        <img src="./images/img_2.jpg" alt="Create mobile solutions." width="264">
+                    </li>
+                    <li>
+                        <img src="./images/img_3.jpg" alt="Create recomendation for you." width="264">
+                    </li>
+                </ul>
+            </section>
+            <section>
                 <h2>Our Team</h2>
                 <ul>
                     <li>
                         <img src="./images/mark_guerrero.jpg"  alt="Mark Guerrero" width="264">
-                        <p>Mark Guerrero</p>
+                        <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
                         <img src="./images/tom_ford.jpg" alt="Tom Ford" width="264">
-                        <p>Tom Ford</p>
+                        <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/camila_garcia.jpg" alt="Camila Garcia" width="264">
-                        <p>Camila Garcia</p>
+                        <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
                         <img src="./images/daniel_wilson.jpg" alt="Daniel Wilson" width="264">
-                        <p>Daniel Wilson</p>
+                        <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </li>
                 </ul>
             </section>
         </main>
         <footer>
-            <a href="/">WEBSTUDIO</a>
+            <a href="./index.html">WEBSTUDIO</a>
             <p>
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
