Fix address tag

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </nav>
             <ul>
                 <li>
-                    <address href="tel:+110001111111">+11 (000) 111-11-11</address>
+                    <address>+11 (000) 111-11-11</address>
                 </li>
                 <li>
-                    <address href="mailto:info@devstudio.com">info@devstudio.com</address>
+                    <address>info@devstudio.com</address>
                 </li>
             </ul>
         </header>
