--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <nav>
-                <a href="./index.html">WEBSTUDIO</a>
+                <a href="./index.html">WebStudio</a>
                 <ul>
                     <li>
                         <a href="">Studio</a>
@@ -20,14 +20,16 @@
                     </li>
                 </ul>
             </nav>
-            <ul>
+            <address>
+                <ul>
                 <li>
-                    <address>+11 (000) 111-11-11</address>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <address>info@devstudio.com</address>
+                    <a href="tel:+110001111111">+11 (000) 111-11-1</a>
                 </li>
-            </ul>
+                </ul>
+            </address>
         </header>
         <main>
             <section>
@@ -70,8 +72,6 @@
                         <img src="./images/img_3.jpg" alt="Create recomendation for you." width="360">
                     </li>
                 </ul>
-            </section>
-            <section>
                 <h2>Our Team</h2>
                 <ul>
                     <li>
@@ -98,7 +98,7 @@
             </section>
         </main>
         <footer>
-            <a href="./index.html">WEBSTUDIO</a>
+            <a href="./index.html">WebStudio</a>
             <p>
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
